--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,9 +7,9 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
-    "moduleDetection": "force",
     "noEmit": true,
 
     /* Linting */
@@ -18,5 +18,6 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["api/**/*.ts", "src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
