lassie ai with gpt

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,6 +18,11 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true
+  },
   "include": ["api/**/*.ts", "src/**/*.ts"],
   "exclude": ["node_modules"]
 }
