--- a/vercel.json
+++ b/vercel.json
@@ -10,14 +10,14 @@
       }
     },
     {
-      "src": "api/index.ts",
+      "src": "api/**/*.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/index.ts"
+      "dest": "/api/$1"
     },
     {
       "handle": "filesystem"
