--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev:client": "vite",
     "dev:server": "nodemon --watch api --ext ts --exec \"tsx api/index.ts\"",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build": "vite build && tsc",
+    "build:dev": "vite build --mode development && tsc",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node api/index.js"
+    "start": "node dist/api/index.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
