--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,8 @@
       "memory": 1024,
       "maxDuration": 60
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
