--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.47",
+    "supabase": "^2.23.4",
     "tailwindcss": "^3.4.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
